--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^7.1.0",
     "gulp-replace": "^1.1.3",
+    "gulp-strip-comments": "^2.6.0",
     "gulp-strip-css-comments": "^2.0.0",
     "gulp-svgmin": "^4.1.0",
     "gulp-uglify": "^3.0.2",
@@ -38,6 +39,7 @@
     "tailwindcss": "^3.3.2"
   },
   "dependencies": {
+    "browser-sync": "^3.0.2",
     "gulp-cli": "^2.3.0"
   }
 }
